--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EscalaWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=EscalaWebMvcContext-5b62351b-e7b1-403a-a97a-636b00b5902b;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
