Adap SQLServer e Migration Initial

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EscalaWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=EscalaWebMvcContext-5b62351b-e7b1-403a-a97a-636b00b5902b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "EscalaWebMvcContext": "Server=CARDIAIS;User=sa;Password=Lorena0405;Database=EscalaWebMvcDb;TrustServerCertificate=True;"
   }
 }
